--- a/run-python.yaml
+++ b/run-python.yaml
@@ -16,10 +16,10 @@ states:
     input:
       commands:
       - command: pyenv local 3.8.13
-      - command: python3 -m pip install -r requirements.txt
+      - command: python3 -m pip install -r requiremgfents.txt
       - command: python3 py-tweets.py -i input.json -o output.json
       # - command: python3 py-tweets.py -b jq(.bearer_token) -t jq(.twitter_searchstring) -m jq(.max_search_returns)
-      - command: ls -la
+      # - command: ls -la
     files:
     - key: py-tweets.py
       scope: workflow
