--- a/run-python.yaml
+++ b/run-python.yaml
@@ -16,6 +16,7 @@ states:
     input:
       commands:
       - command: pyenv local 3.8.13
+      - command: pwd
       - command: ls -la
       # - command: python3 -m pip install -r requirements.txt
       # - command: python3 py-tweets.py -i input.json -o output.json
