--- a/run-python.yaml
+++ b/run-python.yaml
@@ -19,8 +19,8 @@ states:
       - command: pwd
       - command: ls -la
       - command: python3 -m pip install -r requirements.txt
-      - command: python3 py-tweets.py -i input.json -o output.json
-      - command: cat output.json
+      - command: python3 py-tweets.py -i input.json -o out/output.json
+      # - command: cat output.json
       # - command: python3 py-tweets.py -b jq(.bearer_token) -t jq(.twitter_searchstring) -m jq(.max_search_returns)
       # - command: ls -la
     files:
