--- a/run-python.yaml
+++ b/run-python.yaml
@@ -15,7 +15,7 @@ states:
     function: python
     input:
       commands:
-      #- command: pyenv local 3.8.13
+      - command: pyenv local 3.8.13
       #- command: pwd
       #- command: ls -la
       #- command: python3 -m pip install -r requirements.txt
