--- a/run-python.yaml
+++ b/run-python.yaml
@@ -30,4 +30,13 @@ states:
       scope: workflow
     - key: input.json
       scope: workflow
-  
+  transform: 'jq({ tweets: .return.python[2].result })'
+  transition: store-data
+
+- id: store-data
+  type: setter
+  variables:
+  - key: tweets.json
+    scope: workflow
+    mimeType: application/json
+    value: 'jq(.)'
